Add fontello and webpack-bundle-analyzer

--- a/apps/client/src/styles.scss
+++ b/apps/client/src/styles.scss
@@ -1,3 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap');
+@import './fontello/css/jonraaron.css';
+
 @tailwind components;
 @tailwind base;
 @tailwind utilities;
+
+body {
+  font-family: 'Shadows Into Light', cursive;
+}
