--- a/apps/client/src/fontello/css/jonraaron.css
+++ b/apps/client/src/fontello/css/jonraaron.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'jonraaron';
-  src: url('../font/jonraaron.eot?74371191');
-  src: url('../font/jonraaron.eot?74371191#iefix') format('embedded-opentype'),
-       url('../font/jonraaron.woff2?74371191') format('woff2'),
-       url('../font/jonraaron.woff?74371191') format('woff'),
-       url('../font/jonraaron.ttf?74371191') format('truetype'),
-       url('../font/jonraaron.svg?74371191#jonraaron') format('svg');
+  src: url('../font/jonraaron.eot?86316900');
+  src: url('../font/jonraaron.eot?86316900#iefix') format('embedded-opentype'),
+       url('../font/jonraaron.woff2?86316900') format('woff2'),
+       url('../font/jonraaron.woff?86316900') format('woff'),
+       url('../font/jonraaron.ttf?86316900') format('truetype'),
+       url('../font/jonraaron.svg?86316900#jonraaron') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'jonraaron';
-    src: url('../font/jonraaron.svg?74371191#jonraaron') format('svg');
+    src: url('../font/jonraaron.svg?86316900#jonraaron') format('svg');
   }
 }
 */
@@ -58,3 +58,6 @@
 .jra-sun:before { content: '\e801'; } /* '' */
 .jra-display:before { content: '\e802'; } /* '' */
 .jra-chevron-down:before { content: '\e803'; } /* '' */
+.jra-arrow-right-from-bracket-solid:before { content: '\e804'; } /* '' */
+.jra-arrow-right-to-bracket-solid:before { content: '\e805'; } /* '' */
+.jra-spinner-solid:before { content: '\e806'; } /* '' */
