--- a/libs/common-components/src/fontello/css/jonraaron-codes.css
+++ b/libs/common-components/src/fontello/css/jonraaron-codes.css
@@ -6,3 +6,7 @@
 .jra-arrow-right-from-bracket-solid:before { content: '\e804'; } /* '' */
 .jra-arrow-right-to-bracket-solid:before { content: '\e805'; } /* '' */
 .jra-spinner-solid:before { content: '\e806'; } /* '' */
+.jra-bars-solid:before { content: '\e807'; } /* '' */
+.jra-chevron-up-solid:before { content: '\e808'; } /* '' */
+.jra-chevron-right-solid:before { content: '\e809'; } /* '' */
+.jra-chevron-left-solid:before { content: '\e80a'; } /* '' */
